
	* scripts/libprometheus.bash.in: Added quotes around echoed variables in
	  logged_failure, source_file, source_config, source_profile, set_stage,
	  unpack, cat_file & location_of.
	* testsuite/libprometheus/log/tnlycf_stderr.txt: Error message updated.
	* testsuite/libprometheus/source_file: Error message updated in
	  invalid_error & none_error.

2004-09-26 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* docs/*, scripts/*: Changed the short option equivalent of
	  --version to '-V' instead of '-v'.

2004-09-23 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/echo_array/echo_array: Added.

	* testsuite/libprometheus/source_file: Added valid.txt, invalid.txt,
	  valid_status, valid_sourced, invalid_status, invalid_error,
	  none_status & none_error.

2004-09-19 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/get_installed_version: Added vtab &
	  get_installed_version.

	* testsuite/libprometheus/choice: Added yes & no.

	* testsuite/runtest.in: Added `shopt -u sourcepath'.
	* scripts/libprometheus.bash.in: Added `shopt -u sourcepath'.

2004-09-18 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/libprometheus.bash.in: Re-ordered logging functions.

	* testsuite/libprometheus/log_echo: Added README, tyly_stdout,
	  tyly_stderr, logfile.txt, tyly_log, tyln_stdout, tyln_stderr,
	  tnly_stdout, tnly_stderr, tnly_log, tnln_stdout & tnln_stderr.

	* testsuite/libprometheus/log_warning: Added README, tyly_stdout,
	  tyly_stderr, logfile.txt, tyly_log, tyln_stdout, tyln_stderr,
	  tnly_stdout, tnly_stderr, tnly_log, tnln_stdout & tnln_stderr.

	* testsuite/README: Added more detail.

2004-09-16 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/libprometheus.bash.in (logged_failure): Added logging &
	  reporting of exit status of failed commands.
	* testsuite/libprometheus/log/*.txt: Updated expected output.

	* scripts/libprometheus.bash.in (log): Added `set -e' to logged command
	  subshell.