@@ -66,7 +66,7 @@ while [[ "$1" == -* ]]; do
 		(--)				shift
 						break ;;
 
-		(*)		script_usage_err "unrecognized option: $1"
+		(*)		script_usage_err "unrecognized option: \`$1'"
 	esac
 	shift
 done
@@ -84,7 +84,7 @@ source_config
 if (( ${#package_list[@]} > 1 )); then
 	for package in "${package_list[@]}"; do
 		"$0" --config="$config" --stage=$stage "$package" ||
-		error "$package testsuite failed"
+		error "\`$package' testsuite failed"
 	done
 	finish
 fi
@@ -106,7 +106,7 @@ if [[ "$check" == yes ]]; then
 		# No commands for checking package.  Warn user but don't fail;
 		# this is more likely a configuration error than a package
 		# error.
-		log_warning "no check_pkg function in $profile"
+		log_warning "no check_pkg function in \`$profile'"
 		log_warning "skipped checks for $name_ver"
 	fi
 fi
