@@ -65,7 +65,7 @@ function unpack_archives {
 		pushd "$dir" > /dev/null &&
 		unpack "$archive" &&
 		popd > /dev/null ||
-		error "cannot unpack ${archives[$i]} in $dir"
+		error "cannot unpack \`${archives[$i]}' in \`$dir'"
 	done
 }
 
@@ -91,7 +91,7 @@ function apply_patches {
 		cat_file "$patch" | log $cmd &&
 		pipestat &&
 		popd > /dev/null ||
-		error "cannot apply ${patches[$i]}"
+		error "cannot apply \`${patches[$i]}'"
 	done
 }
 
@@ -119,7 +119,7 @@ while [[ "$1" == -* ]]; do
 		(--)				shift
 						break ;;
 
-		(*)		script_usage_err "unrecognized option: $1"
+		(*)		script_usage_err "unrecognized option: \`$1'"
 	esac
 	shift
 done
@@ -137,7 +137,7 @@ source_config
 if (( ${#package_list[@]} > 1 )); then
 	for package in "${package_list[@]}"; do
 		"$0" --config="$config" --stage=$stage "$package" ||
-		error "failed to unpack $package"
+		error "failed to unpack \`$package'"
 	done
 	finish
 fi
